# oneflow

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .dockerignore  .gitconfig  .gitignore  .gitmodules  .lsan-suppressions  .mergify.yml  .tsan-suppressions  .ubsan-suppressions  1  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  LICENSE  MANIFEST.in  OneFlowSystemOps.td  README.md  \  bias.npy  build.bat  build.sh  build_oneflow.bat  build_oneflow.sh  build_oneflow_cpu.sh  build_oneflow_xcode.sh  build_third_party.bat  build_third_party.sh  build_third_party_xcode.sh  build_xcode.sh  compile.sh  compile_commands.json  compile_log.txt  conanfile.py  cycle_gan.py  dev-requirements.txt  dockerimage.yml  dot.sh  (+37 more)
cmake/: 3rd_party.cmake  CMakeCache.txt  CMakeLists.txt  CPM.cmake  CTestTestfile.cmake  FindGFLAG.cmake  FindGLOG.cmake  FindGRPC.cmake  FindPROTOC.cmake  FindRE2.cmake  Makefile  ascend_npu.cmake  cfg.cmake  cmake_install.cmake  cuda.cmake  dependencies.cmake  functional.cmake  git_version.cmake  oneflow-config.cmake  oneflow.cmake  op_schema.cmake  platform.cmake  proto2cpp.cmake  proto2grpc.cmake  pybind11.cmake  python.cmake  swig.cmake  third_party.cmake  threading.cmake  util.cmake  windows.cmake
cmake/caches/ci/: cpu-asan-ubsan.cmake  cpu-only.cmake  cpu-tsan.cmake  cpu.cmake  cuda-75-lld.cmake  cuda-75.cmake  cuda-xla.cmake  cuda.cmake  mlu.cmake
cmake/caches/cn/: cpu.cmake  cuda.cmake  mlu.cmake  npu.cmake
cmake/caches/international/: cpu.cmake  cuda.cmake  mlu.cmake
cmake/gflags/tmp/: gflags-cache-.cmake  gflags-cfgcmd.txt  gflags-gitclone.cmake  gflags-gitupdate.cmake
cmake/glog/tmp/: glog-cache-.cmake  glog-cfgcmd.txt  glog-gitclone.cmake  glog-gitupdate.cmake
cmake/googletest/tmp/: googletest-cache-.cmake  googletest-cfgcmd.txt  googletest-gitclone.cmake  googletest-gitupdate.cmake
cmake/grpc/tmp/: grpc-cache-.cmake  grpc-cfgcmd.txt  grpc-gitclone.cmake  grpc-gitupdate.cmake
cmake/patches/grpc/: CMakeLists.txt  CMakeLists.txt.REMOVED.git-id
cmake/patches/libhdfs3/: CMakeLists.txt
cmake/patches/protobuf/: libprotobuf.cmake
cmake/protobuf/tmp/: protobuf-cfgcmd.txt  protobuf-gitclone.cmake  protobuf-gitupdate.cmake
cmake/utils/: dependencies.cmake  util.cmake
cmake/zlib/tmp/: zlib-cache-.cmake  zlib-cfgcmd.txt  zlib-gitclone.cmake  zlib-gitupdate.cmake
oneflow/api/java/: CMakeLists.txt  example.cpp  example.h  library.cpp  library.h  tensor.cpp  tensor.h
oneflow/cambricon/: CMakeLists.txt  mlu_util.cpp  mlu_util.h
oneflow/cambricon/bang/: adam_update.mlu  bang_handle.h  bang_internal.h  bang_kernels.h  fast_gelu.mlu  fast_gelu_grad.mlu  gather.mlu  memset.mlu  momentum_update.mlu  multi_count_not_finite.mlu  multi_reduce_sum_pow_abs.mlu  regularize_gradient.mlu  scalar_pow_grad.mlu  sqrt_sqaure_sum.mlu  tanh_grad.mlu  unsorted_segment_sum.mlu
oneflow/cambricon/cmake/: bang.cmake
oneflow/cambricon/cnnl/: cnnl_common_descriptor.cpp  cnnl_common_descriptor.h  cnnl_op_descriptor.cpp  cnnl_op_descriptor.h  cnnl_tensor_descriptor.cpp  cnnl_tensor_descriptor.h  cnnl_types.cpp  cnnl_types.h  cnnl_workspace.cpp  cnnl_workspace.h
oneflow/cambricon/collective_communication/: cncl_executor_backend.cpp  cncl_executor_backend.h  cncl_util.cpp  cncl_util.h  eager_cncl_comm_manager.cpp  eager_cncl_comm_manager.h  mlu_all_gather.cpp  mlu_all_reduce.cpp  mlu_broadcast.cpp  mlu_communication_context.cpp  mlu_communication_context.h  mlu_recv.cpp  mlu_reduce.cpp  mlu_reduce_scatter.cpp  mlu_send.cpp  mlu_send_recv_util.cpp  mlu_send_recv_util.h
oneflow/cambricon/common/: mlu_guard.cpp  mlu_guard.h  mlu_util.h
oneflow/cambricon/ep/: mlu_device.cpp  mlu_device.h  mlu_device_manager.cpp  mlu_device_manager.h  mlu_device_manager_factory.cpp  mlu_event.cpp  mlu_event.h  mlu_random_generator.cpp  mlu_random_generator.h  mlu_stream.cpp  mlu_stream.h  mlu_util.cpp  mlu_util.h
oneflow/cambricon/graph/: mlu_stream_context.cpp  register_task_stream_manager.cpp
oneflow/cambricon/kernels/: activation_kernel.cpp  adam_update_kernel.cpp  adaptive_avg_pool_kernel.cpp  adaptive_max_pool_kernel.cpp  add_n_kernel.cpp  arange_kernel.cpp  argmax_kernel.cpp  avg_pooling_kernel.cpp  broadcast_add_kernel.cpp  broadcast_div_grad_kernel.cpp  broadcast_kernels.cpp  broadcast_like_kernel.cpp  cast_kernel.cpp  clip_by_value_kernel.cpp  conv_kernel.cpp  convert_memory_format.cpp  convert_memory_format_util.cpp  convert_memory_format_util.h  dim_gather.cpp  dim_scatter_kernels.cpp  div_kernel.cpp  dropout_kernel.cpp  expand.cpp  gather.cpp  l1_l2_regularize_gradient.cpp  layer_norm_kernel.cpp  log_softmax_kernel.cpp  max_pooling_kernel.cpp  mlu_check_numerics_kernel_observer.cpp  mlu_check_numerics_kernel_observer.h  momentum_update.cpp  multi_count_not_finite_kernel.cpp  multi_reduce_kernels.cpp  nll_loss_kernel.cpp  normalization_add_relu_kernel.cpp  normalization_kernel.cpp  random_mask_like_kernel.cpp  reduce_kernel.cpp  reduce_max_kernel.cpp  reduce_sum_kernel.cpp  (+14 more)
oneflow/core/: 2  CMakeLists.txt  \  tags
oneflow/core/actor/: .actor.cpp.swp  .copy_comm_net_actor.cpp.swp  .normal_forward_compute_actor.cpp.swp  acc_actor.cpp  acc_compute_actor.cpp  acc_compute_actor.h  acc_tick_actor.cpp  acc_tick_compute_actor.cpp  acc_tick_compute_actor.h  accumulate_actor.cpp  accumulate_actor.h  accumulate_compute_actor.cpp  accumulate_compute_actor.h  accuracy_accumulate_compute_actor.cpp  accuracy_accumulate_compute_actor.h  accuracy_print_compute_actor.cpp  accuracy_print_compute_actor.h  act_event.proto  act_event_logger.cpp  act_event_logger.h  actor.cpp  actor.h  actor_base.cpp  actor_base.h  actor_context.cpp  actor_context.h  actor_message.cpp  actor_message.h  actor_msg_bus.h  (+229 more)
oneflow/ir/: CMakeLists.txt  Iree Scheme.md  README.md  install-llvm.cmake  iree-lifetime.md  llvm-in-tree.cmake  roadmap.md
oneflow/opencl/: CMakeLists.txt
oneflow/user/: CMakeLists.txt
tools/clang-plugin/: .gitignore  CMakeLists.txt
tools/oneflow-tblgen/: CMakeLists.txt  backends.h  op_schema_emitter.cpp  op_schema_header.inc  op_schema_source.inc  op_schema_types.inc  tablegen.cpp
(+21550 files in other folders)
